# functional-rust

./: .gitignore  .mcp.json  005-currying-ocaml.ml  006-function-composition-ocaml.ml  CLAUDE.md  CONTENT_GUIDE.md  Cargo.toml  FUNCTIONAL_SMELT.md  QUEUE.md  QUEUE.md.backup  README.md  SMELT.md  check_dirs.py  check_slugs.py  claude_run_simple.sh  clippy_errors_summary.txt  convert1.sh  convert_batch.sh  convert_five.sh  convert_now.sh  convert_one.py  convert_single.sh  create_dirs.py  create_example_rs.py  create_examples.py  created_dirs.txt  extract.py  extract_five.py  extract_five_pending.py  extract_pending.py  extract_pending2.py  extract_pending_now.py  find_five_pending.py  find_next_five.py  find_pending.py  find_pending.sh  process_batch.py  process_batch.sh  process_batch2.py  process_five_missing_rs.sh  (+16 more)
.credentials/: hostinger-ssh-key
examples/001-applying-a-function-twice/: COMPARISON.md  Cargo.toml  README.md  example  example.rs
examples/001-higher-order-functions/: COMPARISON.md  Cargo.toml  README.md  example.ml
examples/001-last-element/: COMPARISON.md  Cargo.toml  README.md  example.ml
examples/002-function-composition/: COMPARISON.md  Cargo.toml  README.md  example.ml  example.rs
examples/002-last-two/: COMPARISON.md  Cargo.toml  README.md  example.ml  (+1 more)
scripts/: check-one-example.sh  check-readme-quality.py  deploy-rust-site.sh  generate-rust-site.py  stamp-difficulty.py  validate-new-examples.sh
site/: deploy-rust-site.sh  generate-rust-site.py  test-mobile-nav.js
video/: batch-render.sh  package-lock.json  package.json  render.js
(+8591 files in other folders)
